Fixed a bug with overflowing gallery thumbnails, hidden arrows and thumbneils when there's only a single picture.

--- a/app/links/page.module.css
+++ b/app/links/page.module.css
@@ -49,7 +49,7 @@
 	bottom: 0;
 	right: 0;
 
-	background-color: #0006;
+	background-color: #0009;
 	box-shadow: 10px 10px 30px #0007;
 	text-shadow: 0 0 10px #000;
 	border-radius: 20px;
